src/khtml/src/css/parser.output
State 12 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 160 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 162 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce
State 171 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 173 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 175 conflicts: 1 shift/reduce
State 176 conflicts: 1 shift/reduce
State 177 conflicts: 1 shift/reduce
State 178 conflicts: 1 shift/reduce
State 179 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce
State 181 conflicts: 1 shift/reduce
State 182 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce
State 184 conflicts: 1 shift/reduce
State 185 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 188 conflicts: 1 shift/reduce
State 189 conflicts: 1 shift/reduce
State 190 conflicts: 1 shift/reduce
State 191 conflicts: 1 shift/reduce
State 193 conflicts: 1 shift/reduce
State 229 conflicts: 1 shift/reduce
State 276 conflicts: 1 shift/reduce
State 284 conflicts: 1 shift/reduce
State 322 conflicts: 1 shift/reduce
State 334 conflicts: 1 shift/reduce
State 368 conflicts: 1 shift/reduce
State 370 conflicts: 1 shift/reduce


Grammar

    0 $accept: stylesheet $end

    1 stylesheet: maybe_space maybe_charset maybe_sgml import_list namespace_list rule_list
    2           | khtml_rule maybe_space
    3           | khtml_decls maybe_space
    4           | khtml_value maybe_space
    5           | khtml_mediaquery maybe_space
    6           | khtml_selectors maybe_space

    7 ruleset_or_import_or_namespace: ruleset
    8                               | import
    9                               | namespace_rule

   10 khtml_rule: KHTML_RULE_SYM '{' maybe_space ruleset_or_import_or_namespace maybe_space '}'

   11 khtml_decls: KHTML_DECLS_SYM declaration_block

   12 khtml_value: KHTML_VALUE_SYM '{' maybe_space expr '}'

   13 khtml_selectors: KHTML_SELECTORS_SYM '{' maybe_space selector_list '}'

   14 khtml_mediaquery: KHTML_MEDIAQUERY_SYM S maybe_space media_query '}'

   15 maybe_plus: %empty
   16           | '+'

   17 maybe_space: %empty
   18            | maybe_space S

   19 maybe_sgml: %empty
   20           | maybe_sgml SGML_CD
   21           | maybe_sgml S

   22 maybe_charset: %empty
   23              | charset

   24 charset: CHARSET_SYM maybe_space STRING maybe_space ';'
   25        | CHARSET_SYM error invalid_block
   26        | CHARSET_SYM error ';'

   27 import_list: %empty
   28            | import_list import maybe_sgml

   29 import: IMPORT_SYM maybe_space string_or_uri maybe_space maybe_media_list ';'
   30       | IMPORT_SYM error invalid_block
   31       | IMPORT_SYM error ';'

   32 namespace_list: %empty
   33               | namespace_list namespace maybe_sgml

   34 namespace_rule: NAMESPACE_SYM maybe_space maybe_ns_prefix string_or_uri

   35 namespace: namespace_rule maybe_space ';'
   36          | NAMESPACE_SYM error invalid_block
   37          | NAMESPACE_SYM error ';'

   38 maybe_ns_prefix: %empty
   39                | IDENT S

   40 rule_list: %empty
   41          | rule_list rule maybe_sgml

   42 rule: ruleset
   43     | media
   44     | page
   45     | font_face
   46     | invalid_rule
   47     | invalid_at
   48     | import error

   49 safe_ruleset: ruleset
   50             | invalid_rule
   51             | invalid_at
   52             | import error

   53 string_or_uri: STRING
   54              | URI

   55 media_feature: IDENT maybe_space

   56 maybe_media_value: %empty
   57                  | ':' maybe_space expr maybe_space

   58 media_query_exp: '(' maybe_space media_feature maybe_space maybe_media_value ')' maybe_space

   59 media_query_exp_list: media_query_exp
   60                     | media_query_exp_list maybe_space MEDIA_AND maybe_space media_query_exp

   61 maybe_and_media_query_exp_list: %empty
   62                               | MEDIA_AND maybe_space media_query_exp_list

   63 maybe_media_restrictor: %empty
   64                       | MEDIA_ONLY
   65                       | MEDIA_NOT

   66 media_query: media_query_exp_list
   67            | maybe_media_restrictor maybe_space medium maybe_and_media_query_exp_list

   68 maybe_media_list: %empty
   69                 | media_list

   70 media_list: media_query
   71           | media_list ',' maybe_space media_query
   72           | media_list error

   73 media: MEDIA_SYM maybe_space media_list '{' maybe_space ruleset_list '}'
   74      | MEDIA_SYM maybe_space '{' maybe_space ruleset_list '}'

   75 ruleset_list: %empty
   76             | ruleset_list safe_ruleset maybe_space

   77 medium: IDENT maybe_space

   78 page: PAGE_SYM error invalid_block
   79     | PAGE_SYM error ';'

   80 font_face: FONT_FACE_SYM maybe_space declaration_block
   81          | FONT_FACE_SYM error invalid_block
   82          | FONT_FACE_SYM error ';'

   83 combinator: '+' maybe_space
   84           | '~' maybe_space
   85           | '>' maybe_space

   86 unary_operator: '-'
   87               | '+'

   88 ruleset: selector_list declaration_block

   89 selector_list: selector
   90              | selector_list ',' maybe_space selector
   91              | selector_list error

   92 selector: simple_selector
   93         | selector S
   94         | selector S simple_selector
   95         | selector combinator simple_selector
   96         | selector error

   97 namespace_selector: '|'
   98                   | '*' '|'
   99                   | IDENT '|'

  100 simple_selector: element_name
  101                | element_name specifier_list
  102                | specifier_list
  103                | namespace_selector element_name
  104                | namespace_selector element_name specifier_list
  105                | namespace_selector specifier_list

  106 simple_css3_selector: element_name
  107                     | specifier
  108                     | namespace_selector element_name
  109                     | namespace_selector specifier

  110 element_name: IDENT
  111             | '*'

  112 specifier_list: specifier
  113               | specifier_list specifier
  114               | specifier_list error

  115 specifier: HASH
  116          | class
  117          | attrib
  118          | pseudo

  119 class: '.' IDENT

  120 attrib_id: IDENT maybe_space

  121 attrib: '[' maybe_space attrib_id ']'
  122       | '[' maybe_space attrib_id match maybe_space ident_or_string maybe_space ']'
  123       | '[' maybe_space namespace_selector attrib_id ']'
  124       | '[' maybe_space namespace_selector attrib_id match maybe_space ident_or_string maybe_space ']'

  125 match: '='
  126      | INCLUDES
  127      | DASHMATCH
  128      | BEGINSWITH
  129      | ENDSWITH
  130      | CONTAINS

  131 ident_or_string: IDENT
  132                | STRING

  133 pseudo: ':' IDENT
  134       | ':' ':' IDENT
  135       | ':' FUNCTION maybe_space NTH maybe_space ')'
  136       | ':' FUNCTION maybe_space maybe_plus INTEGER maybe_space ')'
  137       | ':' FUNCTION maybe_space IDENT maybe_space ')'
  138       | ':' FUNCTION maybe_space STRING maybe_space ')'
  139       | ':' NOTFUNCTION maybe_space simple_css3_selector maybe_space ')'

  140 declaration_block: '{' maybe_space declaration '}'
  141                  | '{' maybe_space error '}'
  142                  | '{' maybe_space declaration_list '}'
  143                  | '{' maybe_space declaration_list declaration '}'
  144                  | '{' maybe_space declaration_list error '}'

  145 declaration_list: declaration ';' maybe_space
  146                 | error ';' maybe_space
  147                 | declaration_list declaration ';' maybe_space
  148                 | declaration_list error ';' maybe_space

  149 declaration: property ':' maybe_space expr prio
  150            | error invalid_block

  151 property: IDENT maybe_space

  152 prio: IMPORTANT_SYM maybe_space
  153     | %empty

  154 expr: term
  155     | expr operator term

  156 operator: '/' maybe_space
  157         | ',' maybe_space
  158         | %empty

  159 term: unary_term
  160     | unary_operator unary_term
  161     | DIMEN maybe_space
  162     | STRING maybe_space
  163     | IDENT maybe_space
  164     | URI maybe_space
  165     | UNICODERANGE maybe_space
  166     | hexcolor
  167     | function

  168 unary_term: INTEGER maybe_space
  169           | FLOAT maybe_space
  170           | PERCENTAGE maybe_space
  171           | PXS maybe_space
  172           | CMS maybe_space
  173           | MMS maybe_space
  174           | INS maybe_space
  175           | PTS maybe_space
  176           | PCS maybe_space
  177           | DEGS maybe_space
  178           | RADS maybe_space
  179           | GRADS maybe_space
  180           | MSECS maybe_space
  181           | SECS maybe_space
  182           | HERZ maybe_space
  183           | KHERZ maybe_space
  184           | EMS maybe_space
  185           | QEMS maybe_space
  186           | EXS maybe_space
  187           | CHS maybe_space
  188           | REMS maybe_space
  189           | DPI maybe_space
  190           | DPCM maybe_space
  191           | VH maybe_space
  192           | VW maybe_space
  193           | VMIN maybe_space
  194           | VMAX maybe_space

  195 function: FUNCTION maybe_space expr ')' maybe_space
  196         | FUNCTION maybe_space error

  197 hexcolor: HEXCOLOR maybe_space

  198 invalid_at: '@' error invalid_block
  199           | '@' error ';'

  200 invalid_rule: error invalid_block

  201 invalid_block: '{' error invalid_block_list error '}'
  202              | '{' error '}'

  203 invalid_block_list: invalid_block
  204                   | invalid_block_list error invalid_block


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 58
    ')' (41) 58 135 136 137 138 139 195
    '*' (42) 98 111
    '+' (43) 16 83 87
    ',' (44) 71 90 157
    '-' (45) 86
    '.' (46) 119
    '/' (47) 156
    ':' (58) 57 133 134 135 136 137 138 139 149
    ';' (59) 24 26 29 31 35 37 79 82 145 146 147 148 199
    '=' (61) 125
    '>' (62) 85
    '@' (64) 198 199
    '[' (91) 121 122 123 124
    ']' (93) 121 122 123 124
    '{' (123) 10 12 13 73 74 140 141 142 143 144 201 202
    '|' (124) 97 98 99
    '}' (125) 10 12 13 14 73 74 140 141 142 143 144 201 202
    '~' (126) 84
    error (256) 25 26 30 31 36 37 48 52 72 78 79 81 82 91 96 114 141 144 146 148 150 196 198 199 200 201 202 204
    REDUCE (258)
    S (259) 14 18 21 39 93 94
    SGML_CD (260) 20
    INCLUDES (261) 126
    DASHMATCH (262) 127
    BEGINSWITH (263) 128
    ENDSWITH (264) 129
    CONTAINS (265) 130
    STRING <string> (266) 24 53 132 138 162
    IDENT <string> (267) 39 55 77 99 110 119 120 131 133 134 137 151 163
    NTH <string> (268) 135
    HASH <string> (269) 115
    HEXCOLOR <string> (270) 197
    IMPORT_SYM (271) 29 30 31
    PAGE_SYM (272) 78 79
    MEDIA_SYM (273) 73 74
    FONT_FACE_SYM (274) 80 81 82
    CHARSET_SYM (275) 24 25 26
    NAMESPACE_SYM (276) 34 36 37
    KHTML_RULE_SYM (277) 10
    KHTML_DECLS_SYM (278) 11
    KHTML_VALUE_SYM (279) 12
    KHTML_MEDIAQUERY_SYM (280) 14
    KHTML_SELECTORS_SYM (281) 13
    IMPORTANT_SYM (282) 152
    MEDIA_ONLY (283) 64
    MEDIA_NOT (284) 65
    MEDIA_AND (285) 60 62
    QEMS <val> (286) 185
    EMS <val> (287) 184
    EXS <val> (288) 186
    CHS <val> (289) 187
    REMS <val> (290) 188
    PXS <val> (291) 171
    CMS <val> (292) 172
    MMS <val> (293) 173
    INS <val> (294) 174
    PTS <val> (295) 175
    PCS <val> (296) 176
    DEGS <val> (297) 177
    RADS <val> (298) 178
    GRADS <val> (299) 179
    MSECS <val> (300) 180
    SECS <val> (301) 181
    HERZ <val> (302) 182
    KHERZ <val> (303) 183
    DPI <val> (304) 189
    DPCM <val> (305) 190
    VH <val> (306) 191
    VW <val> (307) 192
    VMIN <val> (308) 193
    VMAX <val> (309) 194
    DIMEN <string> (310) 161
    PERCENTAGE <val> (311) 170
    FLOAT <val> (312) 169
    INTEGER <val> (313) 136 168
    URI <string> (314) 54 164
    FUNCTION <string> (315) 135 136 137 138 195 196
    NOTFUNCTION <string> (316) 139
    UNICODERANGE <string> (317) 165


Nonterminals, with rules where they appear

    $accept (82)
        on left: 0
    stylesheet (83)
        on left: 1 2 3 4 5 6
        on right: 0
    ruleset_or_import_or_namespace <rule> (84)
        on left: 7 8 9
        on right: 10
    khtml_rule (85)
        on left: 10
        on right: 2
    khtml_decls (86)
        on left: 11
        on right: 3
    khtml_value (87)
        on left: 12
        on right: 4
    khtml_selectors (88)
        on left: 13
        on right: 6
    khtml_mediaquery (89)
        on left: 14
        on right: 5
    maybe_plus (90)
        on left: 15 16
        on right: 136
    maybe_space (91)
        on left: 17 18
        on right: 1 2 3 4 5 6 10 12 13 14 18 24 29 34 35 55 57 58 60 62 67 71 73 74 76 77 80 83 84 85 90 120 121 122 123 124 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 151 152 156 157 161 162 163 164 165 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197
    maybe_sgml (92)
        on left: 19 20 21
        on right: 1 20 21 28 33 41
    maybe_charset (93)
        on left: 22 23
        on right: 1
    charset <rule> (94)
        on left: 24 25 26
        on right: 23
    import_list (95)
        on left: 27 28
        on right: 1 28
    import <rule> (96)
        on left: 29 30 31
        on right: 8 28 48 52
    namespace_list (97)
        on left: 32 33
        on right: 1 33
    namespace_rule <rule> (98)
        on left: 34
        on right: 9 35
    namespace (99)
        on left: 35 36 37
        on right: 33
    maybe_ns_prefix <string> (100)
        on left: 38 39
        on right: 34
    rule_list (101)
        on left: 40 41
        on right: 1 41
    rule <rule> (102)
        on left: 42 43 44 45 46 47 48
        on right: 41
    safe_ruleset <rule> (103)
        on left: 49 50 51 52
        on right: 76
    string_or_uri <string> (104)
        on left: 53 54
        on right: 29 34
    media_feature <string> (105)
        on left: 55
        on right: 58
    maybe_media_value <valueList> (106)
        on left: 56 57
        on right: 58
    media_query_exp <mediaQueryExp> (107)
        on left: 58
        on right: 59 60
    media_query_exp_list <mediaQueryExpList> (108)
        on left: 59 60
        on right: 60 62 66
    maybe_and_media_query_exp_list <mediaQueryExpList> (109)
        on left: 61 62
        on right: 67
    maybe_media_restrictor <mediaQueryRestrictor> (110)
        on left: 63 64 65
        on right: 67
    media_query <mediaQuery> (111)
        on left: 66 67
        on right: 14 70 71
    maybe_media_list <mediaList> (112)
        on left: 68 69
        on right: 29
    media_list <mediaList> (113)
        on left: 70 71 72
        on right: 69 71 72 73
    media <rule> (114)
        on left: 73 74
        on right: 43
    ruleset_list <ruleList> (115)
        on left: 75 76
        on right: 73 74 76
    medium <string> (116)
        on left: 77
        on right: 67
    page <rule> (117)
        on left: 78 79
        on right: 44
    font_face <rule> (118)
        on left: 80 81 82
        on right: 45
    combinator <relation> (119)
        on left: 83 84 85
        on right: 95
    unary_operator <val> (120)
        on left: 86 87
        on right: 160
    ruleset <rule> (121)
        on left: 88
        on right: 7 42 49
    selector_list <selectorList> (122)
        on left: 89 90 91
        on right: 13 88 90 91
    selector <selector> (123)
        on left: 92 93 94 95 96
        on right: 89 90 93 94 95 96
    namespace_selector <string> (124)
        on left: 97 98 99
        on right: 103 104 105 108 109 123 124
    simple_selector <selector> (125)
        on left: 100 101 102 103 104 105
        on right: 92 94 95
    simple_css3_selector <selector> (126)
        on left: 106 107 108 109
        on right: 139
    element_name <element> (127)
        on left: 110 111
        on right: 100 101 103 104 106 108
    specifier_list <selector> (128)
        on left: 112 113 114
        on right: 101 102 104 105 113 114
    specifier <selector> (129)
        on left: 115 116 117 118
        on right: 107 109 112 113
    class <selector> (130)
        on left: 119
        on right: 116
    attrib_id <attribute> (131)
        on left: 120
        on right: 121 122 123 124
    attrib <selector> (132)
        on left: 121 122 123 124
        on right: 117
    match <match> (133)
        on left: 125 126 127 128 129 130
        on right: 122 124
    ident_or_string <string> (134)
        on left: 131 132
        on right: 122 124
    pseudo <selector> (135)
        on left: 133 134 135 136 137 138 139
        on right: 118
    declaration_block <ok> (136)
        on left: 140 141 142 143 144
        on right: 11 80 88
    declaration_list <ok> (137)
        on left: 145 146 147 148
        on right: 142 143 144 147 148
    declaration <ok> (138)
        on left: 149 150
        on right: 140 143 145 147
    property <prop_id> (139)
        on left: 151
        on right: 149
    prio <b> (140)
        on left: 152 153
        on right: 149
    expr <valueList> (141)
        on left: 154 155
        on right: 12 57 149 155 195
    operator <tok> (142)
        on left: 156 157 158
        on right: 155
    term <value> (143)
        on left: 159 160 161 162 163 164 165 166 167
        on right: 154 155
    unary_term <value> (144)
        on left: 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194
        on right: 159 160
    function <value> (145)
        on left: 195 196
        on right: 167
    hexcolor <string> (146)
        on left: 197
        on right: 166
    invalid_at <rule> (147)
        on left: 198 199
        on right: 47 51
    invalid_rule <rule> (148)
        on left: 200
        on right: 46 50
    invalid_block (149)
        on left: 201 202
        on right: 25 30 36 78 81 150 198 200 203 204
    invalid_block_list (150)
        on left: 203 204
        on right: 201 204


State 0

    0 $accept: . stylesheet $end

    KHTML_RULE_SYM        shift, and go to state 1
    KHTML_DECLS_SYM       shift, and go to state 2
    KHTML_VALUE_SYM       shift, and go to state 3
    KHTML_MEDIAQUERY_SYM  shift, and go to state 4
    KHTML_SELECTORS_SYM   shift, and go to state 5

    $default  reduce using rule 17 (maybe_space)

    stylesheet        go to state 6
    khtml_rule        go to state 7
    khtml_decls       go to state 8
    khtml_value       go to state 9
    khtml_selectors   go to state 10
    khtml_mediaquery  go to state 11
    maybe_space       go to state 12


State 1

   10 khtml_rule: KHTML_RULE_SYM . '{' maybe_space ruleset_or_import_or_namespace maybe_space '}'

    '{'  shift, and go to state 13


State 2

   11 khtml_decls: KHTML_DECLS_SYM . declaration_block

    '{'  shift, and go to state 14

    declaration_block  go to state 15


State 3

   12 khtml_value: KHTML_VALUE_SYM . '{' maybe_space expr '}'

    '{'  shift, and go to state 16


State 4

   14 khtml_mediaquery: KHTML_MEDIAQUERY_SYM . S maybe_space media_query '}'

    S  shift, and go to state 17


State 5

   13 khtml_selectors: KHTML_SELECTORS_SYM . '{' maybe_space selector_list '}'

    '{'  shift, and go to state 18


State 6

    0 $accept: stylesheet . $end

    $end  shift, and go to state 19


State 7

    2 stylesheet: khtml_rule . maybe_space

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 20


State 8

    3 stylesheet: khtml_decls . maybe_space

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 21


State 9

    4 stylesheet: khtml_value . maybe_space

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 22


State 10

    6 stylesheet: khtml_selectors . maybe_space

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 23


State 11

    5 stylesheet: khtml_mediaquery . maybe_space

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 24


State 12

    1 stylesheet: maybe_space . maybe_charset maybe_sgml import_list namespace_list rule_list
   18 maybe_space: maybe_space . S

    S            shift, and go to state 25
    CHARSET_SYM  shift, and go to state 26

    S         [reduce using rule 22 (maybe_charset)]
    $default  reduce using rule 22 (maybe_charset)

    maybe_charset  go to state 27
    charset        go to state 28


State 13

   10 khtml_rule: KHTML_RULE_SYM '{' . maybe_space ruleset_or_import_or_namespace maybe_space '}'

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 29


State 14

  140 declaration_block: '{' . maybe_space declaration '}'
  141                  | '{' . maybe_space error '}'
  142                  | '{' . maybe_space declaration_list '}'
  143                  | '{' . maybe_space declaration_list declaration '}'
  144                  | '{' . maybe_space declaration_list error '}'

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 30


State 15

   11 khtml_decls: KHTML_DECLS_SYM declaration_block .

    $default  reduce using rule 11 (khtml_decls)


State 16

   12 khtml_value: KHTML_VALUE_SYM '{' . maybe_space expr '}'

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 31


State 17

   14 khtml_mediaquery: KHTML_MEDIAQUERY_SYM S . maybe_space media_query '}'

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 32


State 18

   13 khtml_selectors: KHTML_SELECTORS_SYM '{' . maybe_space selector_list '}'

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 33


State 19

    0 $accept: stylesheet $end .

    $default  accept


State 20

    2 stylesheet: khtml_rule maybe_space .
   18 maybe_space: maybe_space . S

    S  shift, and go to state 25

    $default  reduce using rule 2 (stylesheet)


State 21

    3 stylesheet: khtml_decls maybe_space .
   18 maybe_space: maybe_space . S

    S  shift, and go to state 25

    $default  reduce using rule 3 (stylesheet)


State 22

    4 stylesheet: khtml_value maybe_space .
   18 maybe_space: maybe_space . S

    S  shift, and go to state 25

    $default  reduce using rule 4 (stylesheet)


State 23

    6 stylesheet: khtml_selectors maybe_space .
   18 maybe_space: maybe_space . S

    S  shift, and go to state 25

    $default  reduce using rule 6 (stylesheet)


State 24

    5 stylesheet: khtml_mediaquery maybe_space .
   18 maybe_space: maybe_space . S

    S  shift, and go to state 25

    $default  reduce using rule 5 (stylesheet)


State 25

   18 maybe_space: maybe_space S .

    $default  reduce using rule 18 (maybe_space)


State 26

   24 charset: CHARSET_SYM . maybe_space STRING maybe_space ';'
   25        | CHARSET_SYM . error invalid_block
   26        | CHARSET_SYM . error ';'

    error  shift, and go to state 34

    S       reduce using rule 17 (maybe_space)
    STRING  reduce using rule 17 (maybe_space)

    maybe_space  go to state 35


State 27

    1 stylesheet: maybe_space maybe_charset . maybe_sgml import_list namespace_list rule_list

    $default  reduce using rule 19 (maybe_sgml)

    maybe_sgml  go to state 36


State 28

   23 maybe_charset: charset .

    $default  reduce using rule 23 (maybe_charset)


State 29

   10 khtml_rule: KHTML_RULE_SYM '{' maybe_space . ruleset_or_import_or_namespace maybe_space '}'
   18 maybe_space: maybe_space . S

    S              shift, and go to state 25
    IDENT          shift, and go to state 37
    HASH           shift, and go to state 38
    ':'            shift, and go to state 39
    '.'            shift, and go to state 40
    '['            shift, and go to state 41
    '*'            shift, and go to state 42
    '|'            shift, and go to state 43
    IMPORT_SYM     shift, and go to state 44
    NAMESPACE_SYM  shift, and go to state 45

    ruleset_or_import_or_namespace  go to state 46
    import                          go to state 47
    namespace_rule                  go to state 48
    ruleset                         go to state 49
    selector_list                   go to state 50
    selector                        go to state 51
    namespace_selector              go to state 52
    simple_selector                 go to state 53
    element_name                    go to state 54
    specifier_list                  go to state 55
    specifier                       go to state 56
    class                           go to state 57
    attrib                          go to state 58
    pseudo                          go to state 59


State 30

   18 maybe_space: maybe_space . S
  140 declaration_block: '{' maybe_space . declaration '}'
  141                  | '{' maybe_space . error '}'
  142                  | '{' maybe_space . declaration_list '}'
  143                  | '{' maybe_space . declaration_list declaration '}'
  144                  | '{' maybe_space . declaration_list error '}'

    error  shift, and go to state 60
    S      shift, and go to state 25
    IDENT  shift, and go to state 61

    declaration_list  go to state 62
    declaration       go to state 63
    property          go to state 64


State 31

   12 khtml_value: KHTML_VALUE_SYM '{' maybe_space . expr '}'
   18 maybe_space: maybe_space . S

    S             shift, and go to state 25
    STRING        shift, and go to state 65
    IDENT         shift, and go to state 66
    HEXCOLOR      shift, and go to state 67
    QEMS          shift, and go to state 68
    EMS           shift, and go to state 69
    EXS           shift, and go to state 70
    CHS           shift, and go to state 71
    REMS          shift, and go to state 72
    PXS           shift, and go to state 73
    CMS           shift, and go to state 74
    MMS           shift, and go to state 75
    INS           shift, and go to state 76
    PTS           shift, and go to state 77
    PCS           shift, and go to state 78
    DEGS          shift, and go to state 79
    RADS          shift, and go to state 80
    GRADS         shift, and go to state 81
    MSECS         shift, and go to state 82
    SECS          shift, and go to state 83
    HERZ          shift, and go to state 84
    KHERZ         shift, and go to state 85
    DPI           shift, and go to state 86
    DPCM          shift, and go to state 87
    VH            shift, and go to state 88
    VW            shift, and go to state 89
    VMIN          shift, and go to state 90
    VMAX          shift, and go to state 91
    DIMEN         shift, and go to state 92
    PERCENTAGE    shift, and go to state 93
    FLOAT         shift, and go to state 94
    INTEGER       shift, and go to state 95
    URI           shift, and go to state 96
    FUNCTION      shift, and go to state 97
    UNICODERANGE  shift, and go to state 98
    '+'           shift, and go to state 99
    '-'           shift, and go to state 100

    unary_operator  go to state 101
    expr            go to state 102
    term            go to state 103
    unary_term      go to state 104
    function        go to state 105
    hexcolor        go to state 106


State 32

   14 khtml_mediaquery: KHTML_MEDIAQUERY_SYM S maybe_space . media_query '}'
   18 maybe_space: maybe_space . S

    S           shift, and go to state 25
    MEDIA_ONLY  shift, and go to state 107
    MEDIA_NOT   shift, and go to state 108
    '('         shift, and go to state 109

    S         [reduce using rule 63 (maybe_media_restrictor)]
    $default  reduce using rule 63 (maybe_media_restrictor)

    media_query_exp         go to state 110
    media_query_exp_list    go to state 111
    maybe_media_restrictor  go to state 112
    media_query             go to state 113


State 33

   13 khtml_selectors: KHTML_SELECTORS_SYM '{' maybe_space . selector_list '}'
   18 maybe_space: maybe_space . S

    S      shift, and go to state 25
    IDENT  shift, and go to state 37
    HASH   shift, and go to state 38
    ':'    shift, and go to state 39
    '.'    shift, and go to state 40
    '['    shift, and go to state 41
    '*'    shift, and go to state 42
    '|'    shift, and go to state 43

    selector_list       go to state 114
    selector            go to state 51
    namespace_selector  go to state 52
    simple_selector     go to state 53
    element_name        go to state 54
    specifier_list      go to state 55
    specifier           go to state 56
    class               go to state 57
    attrib              go to state 58
    pseudo              go to state 59


State 34

   25 charset: CHARSET_SYM error . invalid_block
   26        | CHARSET_SYM error . ';'

    '{'  shift, and go to state 115
    ';'  shift, and go to state 116

    invalid_block  go to state 117


State 35

   18 maybe_space: maybe_space . S
   24 charset: CHARSET_SYM maybe_space . STRING maybe_space ';'

    S       shift, and go to state 25
    STRING  shift, and go to state 118


State 36

    1 stylesheet: maybe_space maybe_charset maybe_sgml . import_list namespace_list rule_list
   20 maybe_sgml: maybe_sgml . SGML_CD
   21           | maybe_sgml . S

    S        shift, and go to state 119
    SGML_CD  shift, and go to state 120

    $default  reduce using rule 27 (import_list)

    import_list  go to state 121


State 37

   99 namespace_selector: IDENT . '|'
  110 element_name: IDENT .

    '|'  shift, and go to state 122

    $default  reduce using rule 110 (element_name)


State 38

  115 specifier: HASH .

    $default  reduce using rule 115 (specifier)


State 39

  133 pseudo: ':' . IDENT
  134       | ':' . ':' IDENT
  135       | ':' . FUNCTION maybe_space NTH maybe_space ')'
  136       | ':' . FUNCTION maybe_space maybe_plus INTEGER maybe_space ')'
  137       | ':' . FUNCTION maybe_space IDENT maybe_space ')'
  138       | ':' . FUNCTION maybe_space STRING maybe_space ')'
  139       | ':' . NOTFUNCTION maybe_space simple_css3_selector maybe_space ')'

    IDENT        shift, and go to state 123
    ':'          shift, and go to state 124
    FUNCTION     shift, and go to state 125
    NOTFUNCTION  shift, and go to state 126


State 40

  119 class: '.' . IDENT

    IDENT  shift, and go to state 127


State 41

  121 attrib: '[' . maybe_space attrib_id ']'
  122       | '[' . maybe_space attrib_id match maybe_space ident_or_string maybe_space ']'
  123       | '[' . maybe_space namespace_selector attrib_id ']'
  124       | '[' . maybe_space namespace_selector attrib_id match maybe_space ident_or_string maybe_space ']'

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 128


State 42

   98 namespace_selector: '*' . '|'
  111 element_name: '*' .

    '|'  shift, and go to state 129

    $default  reduce using rule 111 (element_name)


State 43

   97 namespace_selector: '|' .

    $default  reduce using rule 97 (namespace_selector)


State 44

   29 import: IMPORT_SYM . maybe_space string_or_uri maybe_space maybe_media_list ';'
   30       | IMPORT_SYM . error invalid_block
   31       | IMPORT_SYM . error ';'

    error  shift, and go to state 130

    S       reduce using rule 17 (maybe_space)
    STRING  reduce using rule 17 (maybe_space)
    URI     reduce using rule 17 (maybe_space)

    maybe_space  go to state 131


State 45

   34 namespace_rule: NAMESPACE_SYM . maybe_space maybe_ns_prefix string_or_uri

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 132


State 46

   10 khtml_rule: KHTML_RULE_SYM '{' maybe_space ruleset_or_import_or_namespace . maybe_space '}'

    $default  reduce using rule 17 (maybe_space)

    maybe_space  go to state 133


State 47

    8 ruleset_or_import_or_namespace: import .

    $default  reduce using rule 8 (ruleset_or_import_or_namespace)


State 48

    9 ruleset_or_import_or_namespace: namespace_rule .

    $default  reduce using rule 9 (ruleset_or_import_or_namespace)


State 49

    7 ruleset_or_import_or_namespace: ruleset .

    $default  reduce using rule 7 (ruleset_or_import_or_namespace)


State 50

   88 ruleset: selector_list . declaration_block
   90 selector_list: selector_list . ',' maybe_space selector
   91              | selector_list . error

    error  shift, and go to state 134
    '{'    shift, and go to state 14
    ','    shift, and go to state 135

    declaration_block  go to state 136


State 51

   89 selector_list: selector .
   93 selector: selector . S
   94         | selector . S simple_selector
   95         | selector . combinator simple_selector
   96         | selector . error

    error  shift, and go to state 137
    S      shift, and go to state 138
    '+'    shift, and go to state 139
    '~'    shift, and go to state 140
    '>'    shift, and go to state 141

    '{'  reduce using rule 89 (selector_list)
    '}'  reduce using rule 89 (selector_list)
    ','  reduce using rule 89 (selector_list)

    combinator  go to state 142


State 52

  103 simple_selector: namespace_selector . element_name
  104                | namespace_selector . element_name specifier_list
  105                | namespace_selector . specifier_list

    IDENT  shift, and go to state 143
    HASH   shift, and go to state 38
    ':'    shift, and go to state 39
    '.'    shift, and go to state 40
    '['    shift, and go to state 41
    '*'    shift, and go to state 144

    element_name    go to state 145
    specifier_list  go to state 146
    specifier       go to state 56
    class           go to state 57
    attrib          go to state 58
    pseudo          go to state 59


State 53

   92 selector: simple_selector .

    $default  reduce using rule 92 (selector)


State 54

  100 simple_selector: element_name .
  101                | element_name . specifier_list

    HASH  shift, and go to state 38
    ':'   shift, and go to state 39
    '.'   shift, and go to state 40
    '['   shift, and go to state 41

    $default  reduce using rule 100 (simple_selector)

    specifier_list  go to state 147
    specifier       go to state 56
    class           go to state 57
    attrib          go to state 58
    pseudo          go to state 59


State 55
